2007-12-16  Ingmar Schlecht  <ingmar@typo3.org>

	* Update checklist of things to do before a release: Add the new version to the "TYPO3 Core" project in the Bugtracker.
	* Code cleanup, simplyfying switch for trunk vs. branch releases
	* Put updating of TYPO_VERSION to separate function updateTypoVersion()
	* Automatic update of the TYPO_VERSION in config_default.php after the release has been made to the next version number appended with "-dev".
	* Added function displayEMailTemplate() that displays an example email to send out as an announcement

2007-12-02  Ingmar Schlecht  <ingmar@typo3.org>

	* Update checklist of things to do before a release: "We should always update the ext_emconf.php files of all sysexts before releasing new versions, because otherwise the EM shows "A difference between the originally installed version and the current was detected!" if files have been changed, which confuses the user and makes it impossible to see if there have really been manual changes.)"

2007-11-15  Ingmar Schlecht  <ingmar@typo3.org>

	* Use $this->exec() always instead of just exec() to always get the questions whether the command should be executed.

2007-11-12  Ingmar Schlecht  <ingmar@typo3.org>

	* Update checklist of things to do before a release: Update tsconfig_help data SQL file

2007-06-08  Michael Stucki  <michael@typo3.org>

	* Update checklist of things to do before a release: Get in touch with Rasmus Skjoldan for getting a new login image

2007-03-06  Michael Stucki  <michael@typo3.org>

	* Fixed filename of md5sums.txt
	* Skip .svn directories when searching for documentation files
	* More fixes found during 4.1 packaging

2007-02-20  Michael Stucki  <michael@typo3.org>

	* Add documentation files again

2007-02-19  Michael Stucki  <michael@typo3.org>

	* Complete rewrite as a shell script instead of PHP

2005-11-30  Michael Stucki  <michael@typo3.org>

	* Added extension based method make files executable (e.g. *.sh)
	* Added 3.8.1 templates